hphp/hack/test/typecheck/aktuple/nested_dynamic_index_lvalue.php.exp
File "nested_dynamic_index_lvalue.php", line 11, characters 15-22:
Invalid argument (Typing[4110])
  File "nested_dynamic_index_lvalue.php", line 14, characters 22-27:
  Expected `string`
  File "nested_dynamic_index_lvalue.php", line 9, characters 21-21:
  But got `int`
